--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,10 +4,13 @@
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="10" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".MeetingPlanner"
-                  android:label="@string/app_name">
+    	<uses-library android:name="com.google.android.maps" />
+    	<activity android:name=".MeetingPlanner"
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
